--- a/HW1_Gradient_Descent.ipynb
+++ b/HW1_Gradient_Descent.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# <b>CS156 (Introduction to AI), Spring 2021</b>\n",
-    "# <u><b>Homework 1 submission</b></u>"
+    "### Implementation of gradient descent for quadratic fn f(x)=(3x^2)+2x-4"
    ]
   },
   {
